# project-chimera-ai-influencer-factory

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  Makefile  README.md  TASK1_COMPLETION_SUMMARY.md  pyproject.toml  verify_completion.py
.cursor/rules/: agent.mdc  project_chimera.mdc
.github/: copilot-instructions.md
.github/workflows/: main.yml
.mcp/: config.yaml
docker/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-spec-driven-development.md  0003-hierarchical-agent-swarm.md
docs/logs/: development-journal.md
research/: tooling_strategy.md
skills/: README.md  skill_generate_content.py  skill_social_media_post.py  skill_trend_research.py
specs/: _meta.md  agent_rules.md  frontend.md  functional.md  openclaw_integration.md  security.md  technical.md
src/project_chimera/: __init__.py
tests/: run_tests.py  test_skills_interface.py  test_trend_fetcher.py
