# Update ruff configuration in pyproject.toml
[project]
name = "project-chimera"
version = "0.1.0"
description = "Factory infrastructure for autonomous AI influencers"
authors = [{name = "Tsegay Assefa"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "weaviate-client>=4.0.0",
    "mcp>=0.1.0",
    "coinbase-agentkit>=0.1.0",
    "uvicorn>=0.24.0",
    "celery>=5.3.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_chimera"]

[tool.hatch.build]
include = [
    "src/project_chimera/*.py",
    "specs/*.md",
    "skills/*.py",
    "tests/*.py",
    "research/*.md",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true

# FIX: Update ruff configuration to new format
[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B008"]
target-version = "py311"
line-length = 88

[tool.ruff.format]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
